--- a/buildout.cfg
+++ b/buildout.cfg
@@ -13,7 +13,7 @@ parts =
 
 [instance]
 recipe = plone.recipe.zope2instance
-user = admin:admin
+user = webadmin:0heroku1
 relative-paths = true
 debug-mode = on
 
@@ -24,6 +24,8 @@ eggs =
     rapido.plone
     plone.restapi
     collective.themesitesetup
+    collective.easyform
+    collective.documentgenerator
 
 zcml-additional =
   <configure xmlns="http://namespaces.zope.org/zope"
